2019-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #24603]
	* sysdeps/x86_64/configure.ac: Check if -mprefer-vector-width=128
	works.
	* sysdeps/x86_64/configure: Regenerated.
	* sysdeps/x86_64/fpu/Makefile (CFLAGS-branred.c): New.  Set
	to -mprefer-vector-width=128 if supported.

2019-07-24  Florian Weimer  <fweimer@redhat.com>

	* scripts/build-many-glibcs.py (Context.checkout): Default to
	Linux 5.2.

2019-07-24  Florian Weimer  <fweimer@redhat.com>

	[BZ #24532]
	Linux: Use in-tree copy of SO_ constants for !__USE_MISC.
	* sysdeps/unix/sysv/linux/Makefile [$(subdir) == socket]
	(sysdep_headers): Add bits/socket-constants.h.
	(tests-special): Add tst-socket-consts.out.
	(tst-socket-consts.out): New target.
	* sysdeps/unix/sysv/linux/bits/socket.h: Remove macro tracking
	around <asm/unistd.h>.
	[__USE_MISC]: Include <bits/types/time_t.h> before <asm/socket.h>.
	[!__USE_MISC]: Include <sys/socket-constants.h> instead of
	<asm/socket.h>.
	* sysdeps/unix/sysv/linux/bits/tst-socket-consts.py: New file.
	* sysdeps/unix/sysv/linux/bits/socket-constants.h: Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/socket-constants.h: Likewise.
	* sysdeps/unix/sysv/linux/hppa/bits/socket-constants.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/socket-constants.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/socket-constants.h:
	Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/socket-constants.h: Likewise.

2019-07-23  Tulio Magno Quites Machado Filho  <tuliom@linux.ibm.com>

	[BZ #24794]
	* Makefile (testroot.pristine/install.stamp): Pass
	subdirs='$(all-subdirs)' to make install.

	* Makefile (testroot.pristine/install.stamp): Execute ld.so with
	the same arguments used in all tests.

2019-07-22  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* NEWS: Mention the AArch64 IFUNC resolver ABI change.

2019-07-20  Egor Kobylkin  <egor@kobylkin.com>

	[BZ #2872]
	* locale/C-translit.h.in: Add Cyrillic transliteration.

2019-07-19  Florian Weimer  <fweimer@redhat.com>
