@@ -1,3 +1,9 @@
+2019-07-25  Florian Weimer  <fweimer@redhat.com>
+
+	[BZ #24677]
+	* iconv/gconv_cache.c (__gconv_release_cache): Check reference
+	counter before freeing array.
+
 2019-07-24  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #24603]
